# embedding-server

./: .env.local.sample  .gitignore  CHANGELOG.md  LICENSE  README.md  logging.conf  main.py  pyproject.toml
tests/: test_app.py
